# rust-serialization-benchmark

./: Cargo.toml  README.md
src/: data.rs  main.rs
