[package]
name = "rust-serialization-benchmark"
version = "0.1.0"
authors = ["Jack DeNeut <jdeneut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"




[profile.release]
lto = true
codegen-units = 1
incremental = false
opt-level = "z"